# Sloven-k

./: .gitignore  buildozer.spec  main.py  pyproject.toml
.github/workflows/: build-apk.yml
docs/: index.html  sw.js
docs/superpowers/plans/: 2026-04-28-slovencek-implementation.md
docs/superpowers/specs/: 2026-04-28-slovencek-design.md
scripts/: generate_assets.py  generate_audio.py
src/: main.py
src/data/: curriculum.json
src/exercises/: base.py  fill_blank.py  flashcard.py  listening.py  matching.py  multiple_choice.py  sentence_building.py  session.py  typing_ex.py
src/screens/: exercise.py  home.py  lesson_select.py  results.py  splash.py
src/services/: audio.py  curriculum.py  gemini.py  progress.py  srs.py
src/theme/: style.kv
tests/: test_curriculum.py  test_exercises.py  test_progress.py  test_session.py  test_srs.py
web/: curriculum.json  index.html  manifest.json
