[project]
name = "slovencek"
version = "0.1.0"
description = "Personal Slovenian language learning app"
requires-python = ">=3.12"
dependencies = [
    "kivy>=2.3.0",
    "gtts>=2.5.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "buildozer>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
